--- a/app/index.html
+++ b/app/index.html
@@ -109,7 +109,7 @@
         window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')
 
     </script>
-    <script src="js/main.js"></script>
+    <script src="./dist/bundle.js"></script>
     <script src="js/isotope-docs.min.js"></script>
 
     <script src="blockrain/blockrain.jquery.js"></script>
