--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,6 @@
     <link rel="apple-touch-icon" href="icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower%7CLibre+Baskerville%7CMontserrat:300,400"
         rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -109,7 +108,7 @@
         window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')
 
     </script>
-    <script src="./dist/bundle.js"></script>
+    <script src="../dist/bundle.js"></script>
     <script src="js/isotope-docs.min.js"></script>
 
     <script src="blockrain/blockrain.jquery.js"></script>
