Move html files to views dir & adjust pathes

--- a/app/projects/antarctica/index.html
+++ b/app/projects/antarctica/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="../../img/apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="css/normalize.css">
@@ -56,9 +56,11 @@
     <main class="main-content">
         <section class="section section--why main-center ">
             <h1>Why you’ll love Antarctica</h1>
-            <p>Preserved for peace and science, this ice-crowned continent rewards the traveler with inspiration, adventure
+            <p>Preserved for peace and science, this ice-crowned continent rewards the traveler with inspiration,
+                adventure
                 and perspective. There’s nothing quite like seeing ice shimmering in all directions, reflecting sunlight
-                through each season, or the blazing twinkle of a velvet blanket of stars in winter. Wildlife roams freely,
+                through each season, or the blazing twinkle of a velvet blanket of stars in winter. Wildlife roams
+                freely,
                 with penguins, seals and seabirds unafraid of human visitors.
                 <span class="readmore">
                     <a href="#">Read More </a>
@@ -99,9 +101,12 @@
         </section>
         <section class="section section--what main-center ">
             <h1>What Antarctica is about</h1>
-            <p>Antarctica consists of two main areas. East Antarctica (Greater Antarctica), and smaller West Antarctica (Lesser
-                Antarctica) which also has the Antarctic Peninsula. West Antarctica is an extension of the Andes mountains
-                stretching from South America. It is thought that if the ice sheet were removed, West Antarctica would actually
+            <p>Antarctica consists of two main areas. East Antarctica (Greater Antarctica), and smaller West Antarctica
+                (Lesser
+                Antarctica) which also has the Antarctic Peninsula. West Antarctica is an extension of the Andes
+                mountains
+                stretching from South America. It is thought that if the ice sheet were removed, West Antarctica would
+                actually
                 be a collection of islands.
                 <span class="readmore">
                     <a href="#">Read More </a>
@@ -111,8 +116,10 @@
             <figure class="text-image-block flex-end">
                 <figcaption class="popped-sticker text-image-block--left">
                     <h2>No trees or bushes at all</h2>
-                    <p>Vegetation is limited to about 350 species of mostly lichens, mosses, and algae. There are lush beds
-                        of such vegetation in some parts of the Antarctic Peninsula. Lichens have been discovered growing
+                    <p>Vegetation is limited to about 350 species of mostly lichens, mosses, and algae. There are lush
+                        beds
+                        of such vegetation in some parts of the Antarctic Peninsula. Lichens have been discovered
+                        growing
                         on isolated mountains within 475 km (295 mls) of the South Pole.</p>
                 </figcaption>
                 <div class="text-image-block__image-item"></div>
@@ -120,8 +127,10 @@
             <figure class="text-image-block flex-start">
                 <figcaption class="popped-sticker text-image-block--right">
                     <h2>Wildlife of Antarctica</h2>
-                    <p>The most abundant and best known animals from the southern continent. Penguins, whales seals, albatrosses,
-                        other seabirds and a range of invertebrates you may have not heard of such as krill which form the
+                    <p>The most abundant and best known animals from the southern continent. Penguins, whales seals,
+                        albatrosses,
+                        other seabirds and a range of invertebrates you may have not heard of such as krill which form
+                        the
                         basis of the Antarctic food web. </p>
                 </figcaption>
                 <div class="text-image-block__image-item2"></div>
@@ -131,41 +140,56 @@
         <section class="section section--king main-center ">
             <h1>King Penguins</h1>
             <h2>
-                <img src="./img/icons/hover-icon.png" alt="hover-icon"> Hover for more infos</h2>
+                <img src="./img/icons/hover-icon.png" alt="hover-icon"> Hover for more infos
+            </h2>
             <figure>
-                
+
                 <div class="figure__img-element"><img src="./img/penguin.png" alt="king-penguin">
                     <div class="tooltip tooltip__dot tooltip__dot--down"></div>
                     <div class="tooltip tooltip__dot tooltip__dot--middle"></div>
                     <div class="tooltip tooltip__dot tooltip__dot--top"></div>
                 </div>
-                
+
 
             </figure>
             <button type="button">All tooltips</button>
-            <p class="tooltip tooltip__third-e hide">Incubation time vary between 32 till 68 days. The larger the egg, the longer a penguin has to sit on it. The
-                males of the emperor penguins have to sit more than two months before the egg hatch and the females return.</p>
-            <p class="tooltip tooltip__second-e hide">Penguins in captivity will live longer than penguins in the wild since they are fed nutrionally balanced meals
-                and do not have to contend with predators. Generally, penguins will live from 15 to 20 years. A female Humboldt
+            <p class="tooltip tooltip__third-e hide">Incubation time vary between 32 till 68 days. The larger the egg,
+                the longer a penguin has to sit on it. The
+                males of the emperor penguins have to sit more than two months before the egg hatch and the females
+                return.</p>
+            <p class="tooltip tooltip__second-e hide">Penguins in captivity will live longer than penguins in the wild
+                since they are fed nutrionally balanced meals
+                and do not have to contend with predators. Generally, penguins will live from 15 to 20 years. A female
+                Humboldt
                 penguin in my study group (in captivity) lived to 17 years.</p>
-            <p class="tooltip tooltip__first-e hide">The largest, still living species is the emperor penguin, measuring 120 cm and the smallest is the fairy penguin,
-                only 30 cm tall. Also is known that there is a small difference in size and weight between the sexes, where
+            <p class="tooltip tooltip__first-e hide">The largest, still living species is the emperor penguin, measuring
+                120 cm and the smallest is the fairy penguin,
+                only 30 cm tall. Also is known that there is a small difference in size and weight between the sexes,
+                where
                 the females are the "weaker" (smaller and a bit lighter) sex.</p>
 
 
-            <p>King penguins are one of the species that people think of when the think of penguins. Along with Adelie penguins,
-                and Emperor penguins they have come to represent the whole group. They are very upright, dignified and handsome
-                birds and when they emerge from the sea pristine and glistening there can be no cleaner or more elegant creature
+            <p>King penguins are one of the species that people think of when the think of penguins. Along with Adelie
+                penguins,
+                and Emperor penguins they have come to represent the whole group. They are very upright, dignified and
+                handsome
+                birds and when they emerge from the sea pristine and glistening there can be no cleaner or more elegant
+                creature
                 around.
             </p>
         </section>
         <section class="section section--slideshow main-center ">
             <h1>Antarctica in Photos</h1>
-            <p>It would be far from a continuous smooth sheet though, as it is continuously moving. Glaciers, huge rivers of
-                ice drain the interior of the continent and form ice shelves at the coasts. Where a glacier is moving, the
-                ice cracks, breaks and is ruptured by the underlying rock and also by different streams meeting that move
-                at different speeds. The ice sheet is therefore very dangerous in places as it is broken up by great crevasse
-                fields with some cracks hundreds of feet deep and frequently covered by weak bridges formed of blown snow.</p>
+            <p>It would be far from a continuous smooth sheet though, as it is continuously moving. Glaciers, huge
+                rivers of
+                ice drain the interior of the continent and form ice shelves at the coasts. Where a glacier is moving,
+                the
+                ice cracks, breaks and is ruptured by the underlying rock and also by different streams meeting that
+                move
+                at different speeds. The ice sheet is therefore very dangerous in places as it is broken up by great
+                crevasse
+                fields with some cracks hundreds of feet deep and frequently covered by weak bridges formed of blown
+                snow.</p>
             <div class="slideshow-container">
                 <figure class="slideshow__item slideshow__item1 active">
                     <h5 class="numbertext">1 / 3</h5>
@@ -192,13 +216,17 @@
                 <div class="grid__item--img"></div>
                 <div class="grid__item--text">
                     <h2>We're hiring</h2>
-                    <p>A posuere scelerisque gravida facilisi parturient magna urna donec parturient per augue a amet quam nullam
-                        a ad a. Parturient velit imperdiet in suspendisse eget a parturient adipiscing penatibus convallis
+                    <p>A posuere scelerisque gravida facilisi parturient magna urna donec parturient per augue a amet
+                        quam nullam
+                        a ad a. Parturient velit imperdiet in suspendisse eget a parturient adipiscing penatibus
+                        convallis
                         himenaeos felis torquent facilisi elementum a penatibus suscipit aliquam.</p>
                 </div>
             </div>
             <div class="grid__item grid__item--switcher">
-                <div class="grid__item--map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2723.663879656114!2d7.444509015273927!3d46.94864487914658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478e39c14ff1e8c3%3A0x80099f7dcdbeb001!2sLiip+AG!5e0!3m2!1sen!2sch!4v1516379596138" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+                <div class="grid__item--map"><iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2723.663879656114!2d7.444509015273927!3d46.94864487914658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478e39c14ff1e8c3%3A0x80099f7dcdbeb001!2sLiip+AG!5e0!3m2!1sen!2sch!4v1516379596138"
+                        width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></div>
                 <div class="grid__item--form">
                     <h2>Contact Us</h2>
                     <form action="">
